--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -4,9 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Product</title>
+    <title>Admin Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/css/admin-style.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .table_overflow::-webkit-scrollbar {
+            display: none;
+        }
+
+        table tbody tr:nth-child(even) {
+            background-color: #f3f4f6;
+        }
+    </style>
 </head>
 
 <body class="bg-gray-100 font-sans">
@@ -14,46 +24,46 @@
     <main class="lg:flex">
         <!-- Sidebar -->
         <div
-            class="p-5 w-full flex lg:flex-col items-center lg:items-start justify-between lg:justify-start lg:w-64 lg:h-[100dvh] bg-gray-900 text-white sticky top-0">
+            class="z-50 p-5 w-full flex lg:flex-col items-center lg:items-start justify-between lg:justify-start lg:w-1/5 lg:h-[100dvh] bg-gray-900 text-white sticky top-0">
             <div class="">
                 <h1 class="text-2xl font-bold">Admin Panel</h1>
             </div>
             <ul class="space-y-1 mt-10 hidden lg:block w-full">
 
                 <li>
-                    <a href="../dashboard.html" class="text-lg px-3 py-2 inline-block w-full"><i
+                    <a href="dashboard.html" class="text-lg px-3 py-2 inline-block bg-gray-700 rounded-md w-full"><i
                             class="ri-dashboard-line text-white me-2 text-xl"></i>Dashboard</a>
                 </li>
                 <li>
-                    <a href="users.html" class="text-lg px-3 py-2 inline-block bg-gray-700 rounded-md w-full"><i
+                    <a href="users/users.html" class="text-lg px-3 py-2 inline-block w-full"><i
                             class="ri-group-2-line text-white me-2 text-xl"></i>Users</a>
                 </li>
                 <li>
-                    <a href="../products/products.html" class="text-lg px-3 py-2 inline-block w-full"><i
+                    <a href="products/products.html" class="text-lg px-3 py-2 inline-block w-full"><i
                             class="ri-ink-bottle-line text-white me-2 text-xl"></i>Products</a>
                 </li>
                 <li>
-                    <a href="../brands/brands.html" class="text-lg px-3 py-2 inline-block w-full"><i
+                    <a href="brands/brands.html" class="text-lg px-3 py-2 inline-block w-full"><i
                             class="ri-building-4-line text-white me-2 text-xl"></i>Brands</a>
                 </li>
                 <li>
-                    <a href="../shipping.html" class="text-lg px-3 py-2 inline-block w-full"><i
+                    <a href="shipping.html" class="text-lg px-3 py-2 inline-block w-full"><i
                             class="ri-truck-line text-white me-2 text-xl"></i>Shipping</a>
                 </li>
                 <li>
-                    <a href="../order-history.html" class="text-lg px-3 py-2 inline-block w-full"><i
+                    <a href="order-history.html" class="text-lg px-3 py-2 inline-block w-full"><i
                             class="ri-history-fill text-white me-2 text-xl"></i>Order History</a>
                 </li>
                 <li>
-                    <a href="../payment-history" class="text-lg px-3 py-2 inline-block w-full"><i
+                    <a href="payment-history" class="text-lg px-3 py-2 inline-block w-full"><i
                             class="ri-money-rupee-circle-line text-white me-2 text-xl"></i>Payment History</a>
                 </li>
                 <li>
-                    <a href="../discount.html" class="text-lg px-3 py-2 inline-block w-full"><i
+                    <a href="discount.html" class="text-lg px-3 py-2 inline-block w-full"><i
                             class="ri-discount-percent-line text-white me-2 text-xl"></i>Discount</a>
                 </li>
                 <li>
-                    <a href="../../index.html" class="text-lg px-3 py-2 inline-block w-full"><i
+                    <a href="../index.html" class="text-lg px-3 py-2 inline-block w-full"><i
                             class="ri-home-8-line text-white me-2 text-xl"></i>Home</a>
                 </li>
                 <!-- <li class="hover:bg-gray-700 rounded-md"><a href="admin_products.html" class="text-lg px-3 py-2 inline-block ">Manage Products</a>
@@ -66,40 +76,40 @@
             <div id="admin-mob-nav"
                 class="pt-5 pb-10 px-4 lg:hidden absolute top-full -left-full transition-all duration-300 w-full bg-gray-900">
                 <ul id="admin-mobile-menu" class="overflow-auto  flex flex-col gap-3 pe-2">
-                    <li class="hover:bg-gray-700 rounded-md w-full">
-                        <a href="../dashboard" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
+                    <li class="hover:bg-gray-700 rounded-md w-full bg-gray-700">
+                        <a href="dashboard" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
                                 class="ri-dashboard-line text-white me-2 text-xl"></i>Dashboard</a>
                     </li>
-                    <li class="hover:bg-gray-700 rounded-md w-full bg-gray-700">
-                        <a href="users.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
+                    <li class="hover:bg-gray-700 rounded-md w-full">
+                        <a href="users/users.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
                                 class="ri-group-2-line text-white me-2 text-xl"></i>Users</a>
                     </li>
                     <li class="hover:bg-gray-700 rounded-md w-full">
-                        <a href="../products/products.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
+                        <a href="products/products.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
                                 class="ri-ink-bottle-line text-white me-2 text-xl"></i>Products</a>
                     </li>
                     <li class="hover:bg-gray-700 rounded-md w-full">
-                        <a href="../brands/brands.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
+                        <a href="brands/brands.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
                                 class="ri-building-4-line text-white me-2 text-xl"></i>Brands</a>
                     </li>
                     <li class="hover:bg-gray-700 rounded-md w-full">
-                        <a href="../shipping.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
+                        <a href="shipping.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
                                 class="ri-truck-line text-white me-2 text-xl"></i>Shipping</a>
                     </li>
                     <li class="hover:bg-gray-700 rounded-md w-full">
-                        <a href="../order-history.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
+                        <a href="order-history.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
                                 class="ri-history-fill text-white me-2 text-xl"></i>Order History</a>
                     </li>
                     <li class="hover:bg-gray-700 rounded-md w-full">
-                        <a href="../payment-history.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
+                        <a href="payment-history.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
                                 class="ri-money-rupee-circle-line text-white me-2 text-xl"></i>Payment History</a>
                     </li>
                     <li class="hover:bg-gray-700 rounded-md w-full">
-                        <a href="../discount.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
+                        <a href="discount.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
                                 class="ri-discount-percent-line text-white me-2 text-xl"></i>Discount</a>
                     </li>
                     <li class="hover:bg-gray-700 rounded-md w-full">
-                        <a href="../../index.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
+                        <a href="../index.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
                                 class="ri-home-8-line text-white me-2 text-xl"></i>Home</a>
                     </li>
                 </ul>
@@ -107,45 +117,47 @@
         </div>
 
         <!-- Main Content -->
-        <div class="px-5 py-8 md:p-8 flex flex-col items-center w-full">
-            <h1 class="text-3xl font-semibold mb-6">Add New Product</h1>
+        <div class="p-8 lg:w-4/5 w-full">
+            <!-- Page Title -->
+            <h1 class="text-3xl font-semibold mb-6">Dashboard</h1>
 
-            <!-- Product Form -->
-            <form action="add_product.php" method="POST" enctype="multipart/form-data"
-                class="bg-white p-6 shadow-lg rounded-lg w-full md:w-[600px]">
-                <div class="mb-4">
-                    <label for="name" class="block text-lg font-semibold">Product Name</label>
-                    <input type="text" id="name" name="name" class="w-full p-3 mt-2 border rounded-md" required>
+            <div class="w-full relative">
+                <a href="add-product.html"
+                    class="bg-gray-900 text-white text-sm md:text-md py-2 md:py-3 px-5 md:px-7 rounded-md h-fit absolute right-0">Add
+                    User</a>
+            </div>
+
+            <div class="grid md:grid-cols-3 grid-cols-1 gap-5 w-full mt-24">
+                <div
+                    class="box bg-white rounded-md shadow-md flex items-center justify-content-center flex-col overflow-hidden">
+                    <h1 class="text-4xl font-bold mb-2 mt-10">200</h1>
+                    <h3 class="text-lg font-semibold">Total Users</h3>
+                    <a href="{{ url('admin/users')}}"
+                        class="inline-block w-full p-2 bg-gray-900 text-white text-center mt-5"> View More</a>
                 </div>
-
-                <div class="mb-4">
-                    <label for="description" class="block text-lg font-semibold">Product Description</label>
-                    <textarea id="description" name="description" rows="4" class="w-full p-3 mt-2 border rounded-md"
-                        required></textarea>
+                <div
+                    class="box bg-white rounded-md shadow-md flex items-center justify-content-center flex-col overflow-hidden">
+                    <h1 class="text-4xl font-bold mb-2 mt-10">150</h1>
+                    <h3 class="text-lg font-semibold">Total Orders</h3>
+                    <a href="{{ url('admin/order-history')}}"
+                        class="inline-block w-full p-2 bg-gray-900 text-white text-center mt-5"> View More</a>
                 </div>
-
-                <div class="mb-4">
-                    <label for="price" class="block text-lg font-semibold">Price</label>
-                    <input type="number" id="price" name="price" class="w-full p-3 mt-2 border rounded-md" required>
+                <div
+                    class="box bg-white rounded-md shadow-md flex items-center justify-content-center flex-col overflow-hidden">
+                    <h1 class="text-4xl font-bold mb-2 mt-10">₹ 3,00,000</h1>
+                    <h3 class="text-lg font-semibold">Total Sale</h3>
+                    <a href="{{ url('admin/payments')}}"
+                        class="inline-block w-full p-2 bg-gray-900 text-white text-center mt-5"> View More</a>
                 </div>
-
-                <div class="mb-4">
-                    <label for="image" class="block text-lg font-semibold">Product Image</label>
-                    <input type="file" id="image" name="image" class="w-full p-3 mt-2 border rounded-md" required>
-                </div>
-
-                <button type="submit" class="bg-gray-900 text-white py-2 px-6 rounded-md mt-4">Add Product</button>
-            </form>
+            </div>
         </div>
-
-
     </main>
 
     <script>
         // Toggle mobile menu
 
         const menuBtn = document.getElementById("admin-menu-btn");
-        const mobileMenu = document.getElementById("admin-mobile-menu");
+        const mobileMenu = document.getElementById("admin-mob-nav");
         menuBtn.addEventListener("click", () => {
             mobileMenu.classList.toggle("left-0");
         });
