--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -28,7 +28,7 @@
             <div class="">
                 <h1 class="text-2xl font-bold">Admin Panel</h1>
             </div>
-            <ul class="space-y-1 mt-10 hidden lg:block w-full">
+            <ul class="admin-menu space-y-1 mt-10 hidden lg:block w-full overflow-auto pe-2">
 
                 <li>
                     <a href="dashboard.html" class="text-lg px-3 py-2 inline-block bg-gray-700 rounded-md w-full"><i
@@ -41,6 +41,9 @@
                 <li>
                     <a href="products/products.html" class="text-lg px-3 py-2 inline-block w-full"><i
                             class="ri-ink-bottle-line text-white me-2 text-xl"></i>Products</a>
+                </li>
+                <li>
+                    <a href="carts-details.html" class="text-lg px-3 py-2 inline-block w-full"><i class="ri-shopping-cart-line text-white me-2 text-xl"></i>Cart</a>
                 </li>
                 <li>
                     <a href="brands/brands.html" class="text-lg px-3 py-2 inline-block w-full"><i
@@ -89,6 +92,10 @@
                                 class="ri-ink-bottle-line text-white me-2 text-xl"></i>Products</a>
                     </li>
                     <li class="hover:bg-gray-700 rounded-md w-full">
+                        <a href="carts-detail.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
+                                class="ri-shopping-cart-line text-white me-2 text-xl"></i>Cart</a>
+                    </li>
+                    <li class="hover:bg-gray-700 rounded-md w-full">
                         <a href="brands/brands.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
                                 class="ri-building-4-line text-white me-2 text-xl"></i>Brands</a>
                     </li>
@@ -122,7 +129,7 @@
             <h1 class="text-3xl font-semibold mb-6">Dashboard</h1>
 
             <div class="w-full relative">
-                <a href="add-product.html"
+                <a href="users/add-users.html"
                     class="bg-gray-900 text-white text-sm md:text-md py-2 md:py-3 px-5 md:px-7 rounded-md h-fit absolute right-0">Add
                     User</a>
             </div>
